--- a/app/views/req_reassigns/index.html.erb
+++ b/app/views/req_reassigns/index.html.erb
@@ -1,25 +1,28 @@
 <h1>ReqReassigns list</h1>
+<div class="form-group">
+  <%= link_to t(:new_req), new_req_reassign_path, class: "btn btn-success"%>
+</div>
 <div class="span12">
 <table class="table table-condensed">
   <thead>
     <tr>
+      <th></th>
       <th>Client</th>
       <th>State</th>
       <th>Role</th>
       <th>Manager</th>
       <th>Money</th>
-      <th></th>
     </tr>
   </thead>
   <tbody>
   <% @reqs.each do |req| %>
     <tr>
+      <td><%= link_to 'edit', edit_req_reassign_path(req) %></td>      
       <td><%= link_to req.name, req %></td>
       <td><%= req.state %></td>
       <td><%= req.role %></td>
       <td><%= req.manager %></td>
       <td><%= req.money %></td>
-      <td></td>
     </tr>
   <% end %>
   </tbody>
