--- a/app/views/req_reassigns/show.html.erb
+++ b/app/views/req_reassigns/show.html.erb
@@ -1,15 +1,40 @@
 <h1>ReqReassigns#show</h1>
 <div class="row">
-  <div class="span12">
-    <%= link_to t(:home_link), root_path, class: "btn btn-large btn-secondary", id: "btn-home" %>
-    <%= form_for(@req) do |f| %>
-      <%= f.label :state %><%= f.text_field :state, disabled: true  %>
-      <%= f.label :role %><%= f.text_field :role, disabled: true  %>
-      <%= f.label :name %><%= f.text_field :name, disabled: true  %>          
-      <%= f.label :manager %><%= f.text_field :manager, disabled: true  %>  
-      <%= f.label :money %><%= f.text_field :money, disabled: true  %>  
-    <% end %>    
-    <%= link_to t(:home_link), root_path, class: "btn btn-large btn-secondary" %>
+  <div class="col-md-12">
+    <div class="form-group">
+      <%= link_to t(:home_link), root_path, class: "btn btn-default", id: "btn-home" %>
+    </div>
   </div>
 </div>
-<div><%= @req.state_events %></div>
+<div class="row">
+  <div class="col-md-6">
+    <%= form_for(@req) do |f| %>
+    <div class="form-group">
+      <%= f.label :state %><%= f.text_field :state, disabled: true, class: "form-control"  %>
+    </div>
+    <div class="form-group">
+      <%= f.label :role %><%= f.text_field :role, disabled: true, class: "form-control"    %>
+    </div>
+    <div class="form-group">
+      <%= f.label :name %><%= f.text_field :name, disabled: true, class: "form-control"    %>       
+    </div> 
+    <div class="form-group">  
+      <%= f.label :manager %><%= f.text_field :manager, disabled: true, class: "form-control"    %>  
+    </div>
+    <div class="form-group">
+      <%= f.label :money %><%= f.text_field :money, disabled: true, class: "form-control"    %>  
+    </div>
+    <% end %>  
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="form-group">
+      <%= link_to t(:home_link), root_path, class: "btn btn-default" %>
+    </div>
+  </div>
+</div>
+  <div class="col-md-12">
+    <div class="row"><%= @req.state_events %></div>
+  </div>
+</div>
