--- a/app/views/req_reassigns/new.html.erb
+++ b/app/views/req_reassigns/new.html.erb
@@ -1,10 +1,18 @@
-<h1>New Product</h1>
+<h1>New Request</h1>
 <div class="form-group">
   <%= link_to t(:home_link), root_path, class: "btn btn-default", id: "btn-home" %>
 </div>
 <div class="row">
 	<div class="col-md-6 col-sm-6">
-		<%= render 'form' %>
+		<%= simple_form_for(@req) do |f| %>
+		  <%= render 'shared/error_messages', object: f.object %>
+		  <%= f.input :name %>
+		  <%= f.input :manager %>
+		  <%= f.input :inn %>
+		  <%= f.input :money, as: :currency %>
+
+		  <div class="form-group"><%= f.submit :save, class: "btn btn-success"%></div> 
+		<% end %>
 	</div>
 </div>
 <div class="form-group">
