--- a/app/views/req_reassigns/_form.html.erb
+++ b/app/views/req_reassigns/_form.html.erb
@@ -1,12 +1,17 @@
-<%= simple_form_for(@req) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <div class="form-group"><%= f.input :name, :input_html => {:class => "form-control"} %></div>
-  <div class="form-group"><%= f.input :manager, :input_html => {:class => "form-control"} %></div>
-  <div class="form-group"><%= f.input :inn, :input_html => {:class => "form-control"} %></div>
-  <div class="form-group"><%= f.input :money, :input_html => {:class => "form-control"} %></div>
+<div class="row">
+	<div class="col-md-6 col-sm-6">
+		<%= simple_form_for(@req) do |f| %>
+          <%= f.input :state, disabled: true %>
+          <%= f.input :role, disabled: true %>		
+		  <%= f.input :name %>
+		  <%= f.input :manager, collection: User.all.collect { |x| x.email } %>
+		  <%= f.input :inn %>
+		  <%= f.input :money %>
 
-  <div class="form-group"><%= f.submit :save, class: "btn btn-success"%></div>
-  <% @req.state_events.each do |x| %>
-    <div class="form-group"><%= f.submit x, class: "btn btn-success"%></div>
-  <% end %>  
-<% end %>
+		  <div class="form-group"><%= f.submit :save, class: "btn btn-success"%></div>
+		  <% @req.state_events.each do |x| %>
+		    <div class="form-group fl1"><%= f.submit x, class: "btn btn-success"%></div>
+		  <% end %>  
+		<% end %>
+	</div>
+</div>
