--- a/app/views/req_reassigns/new.html.erb
+++ b/app/views/req_reassigns/new.html.erb
@@ -5,13 +5,12 @@
 <div class="row">
 	<div class="col-md-6 col-sm-6">
 		<%= simple_form_for(@req) do |f| %>
-		  <%= render 'shared/error_messages', object: f.object %>
 		  <%= f.input :name %>
-		  <%= f.input :manager %>
+		  <%= f.input :manager, collection: User.all.collect { |x| x.email } %>
 		  <%= f.input :inn %>
-		  <%= f.input :money, as: :currency %>
+		  <%= f.input :money %>
 
-		  <div class="form-group"><%= f.submit :save, class: "btn btn-success"%></div> 
+		  <div class="form-group fl1"><%= f.submit :save, class: "btn btn-success"%></div>
 		<% end %>
 	</div>
 </div>
