--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,11 +16,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if !user_signed_in? %>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-          <li><%= link_to 'Log In', new_user_session_path %></li>
+          <li><%= link_to 'Регистрация', new_user_registration_path %></li>
+          <li><%= link_to 'Вход', new_user_session_path %></li>
         <% end %>
         <% if user_signed_in? %>
-          <li><%= link_to 'Log Out', destroy_user_session_path, :method=>'delete' %></li>
+          <li><%= link_to 'Выход', destroy_user_session_path, :method=>'delete' %></li>
         <% end %>
 <!--         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -41,9 +41,11 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
+ -->      <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <li><a><%= current_user.email %></a></li>
+        <% end %>
+ <!--        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Action</a></li>
@@ -53,7 +55,7 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
-      </ul> -->
+  -->     </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
