--- a/app/views/req_reassigns/new.html.erb
+++ b/app/views/req_reassigns/new.html.erb
@@ -9,7 +9,7 @@
 		  <%= f.input :inn %>
 		  <%= f.input :manager, collection: User.all.collect { |x| x.email } %>
 		  <%= f.input :money %>
-
+		  <%= f.input :info %>
 		  <div class="form-group fl1"><%= f.submit :save, class: "btn btn-success"%></div>
 		<% end %>
 	</div>
