--- a/app/views/req_reassigns/edit.html.erb
+++ b/app/views/req_reassigns/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Редактировать заявку на перезакрепление</h1>
+<h1>Редактировать заявку</h1>
 <%= render 'edit_buttons' %>
 <%= render 'form' %>
 <%= render 'edit_buttons' %>
