--- a/app/views/req_reassigns/index.html.erb
+++ b/app/views/req_reassigns/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Список заявок на перезакрепление клиентов</h1>
+<h1>Список заявок</h1>
 <div class="form-group">
   <%= link_to t(:new_req), new_req_reassign_path, class: "btn btn-success"%>
 </div>
