--- a/app/views/req_reassigns/new.html.erb
+++ b/app/views/req_reassigns/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Создать заявку на перезакрепление клиента</h1>
+<h1 id="new">Создать заявку</h1>
 <div class="form-group">
   <%= link_to t(:home_link), root_path, class: "btn btn-default", id: "btn-home" %>
 </div>
