--- a/app/views/req_reassigns/show.html.erb
+++ b/app/views/req_reassigns/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Просмотр заявки на перезакрепление</h1>
+<h1 id="show">Просмотр заявки</h1>
 <%= render 'show_buttons' %>
 <div class="row">
   <div class="col-md-6">
