--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -43,7 +43,7 @@
       </form>
  -->      <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
-          <li><a class="user_email"><%= current_user.email %></a></li>
+          <li><a class="user_email"><%= current_user.name %></a></li>
         <% end %>
  <!--        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
