add clients model and client_id field to reqs

--- a/app/views/req_reassigns/index.html.erb
+++ b/app/views/req_reassigns/index.html.erb
@@ -27,7 +27,7 @@
       <td><%= link_to req.id, req %></td>
       <td><%= req.state %></td>
       <td><%= req.user.name %></td>
-      <td><%= req.name %></td>
+      <td><%= req.client.name %></td>
       <td><%= req.old_manager %></td>
       <td><%= req.manager %></td>
       <td style="text-align: right"><%= number_to_currency(req.money, :unit => "") %></td>
