add old_manager_id and new_manager_id

--- a/app/views/req_reassigns/index.html.erb
+++ b/app/views/req_reassigns/index.html.erb
@@ -28,8 +28,8 @@
       <td><%= req.state %></td>
       <td><%= req.user.name %></td>
       <td><%= req.client.name %></td>
-      <td><%= req.old_manager %></td>
-      <td><%= req.manager %></td>
+      <td><%= req.old_manager.name %></td>
+      <td><%= req.new_manager.name %></td>
       <td style="text-align: right"><%= number_to_currency(req.money, :unit => "") %></td>
     </tr>
   <% end %>
