--- a/app/views/req_reassigns/show.html.erb
+++ b/app/views/req_reassigns/show.html.erb
@@ -6,9 +6,9 @@
       <%= f.input :id, disabled: true %>      
       <%= f.input :state, disabled: true %> 
       <%= f.input :user_id, collection: User.all, label_method: :name, value_method: :id, disabled: true %>
-      <%= f.input :client_id, collection: Client.order(:name).all, label_method: :name, value_method: :id, disabled: true %>    
-      <%= f.input :old_manager, disabled: true%>      
-      <%= f.input :manager, disabled: true %>
+      <%= f.input :client_id, collection: Client.order(:name).all, label_method: :name, value_method: :id, disabled: true %>   
+      <%= f.input :old_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: true %>
+      <%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: true  %>   
       <%= f.input :money, disabled: true %>   
       <%= f.input :info, disabled: true %> 
     <% end %>  
