--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,13 +15,6 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <% if !user_signed_in? %>
-          <li><%= link_to 'Регистрация', new_user_registration_path %></li>
-          <li><%= link_to 'Вход', new_user_session_path %></li>
-        <% end %>
-        <% if user_signed_in? %>
-          <li><%= link_to 'Выход', destroy_user_session_path, :method=>'delete' %></li>
-        <% end %>
 <!--         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -41,21 +34,30 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
- -->      <ul class="nav navbar-nav navbar-right">
-        <% if current_user %>
-          <li><a class="user_email"><%= current_user.name %></a></li>
-        <% end %>
- <!--        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+
+ -->    
+      <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle user_name" data-toggle="dropdown" role="button" aria-expanded="false">    
+            <% if current_user %>
+              <%= current_user.name %>
+            <% end %>
+            <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <li><%= link_to 'Выход', destroy_user_session_path, :method=>'delete' %></li> 
+<!--             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Separated link</a></li> -->
           </ul>
         </li>
-  -->     </ul>
+       <% else %>
+          <li><%= link_to 'Регистрация', new_user_registration_path %></li>
+          <li><%= link_to 'Вход', new_user_session_path %></li>       
+        <% end %>        
+       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
