--- a/app/views/req_reassigns/show.html.erb
+++ b/app/views/req_reassigns/show.html.erb
@@ -1,4 +1,14 @@
 <h1 id="show">Просмотр заявки</h1>
+<div class="row">
+  <div class="col-md-12">
+    <div class="alert alert-info" role="alert">
+      <b>Доступные действия:</b><br/>
+      <%= @req.state_events %><br/>
+      <b>Текущее назначение:</b><br/>
+      <%= @req.opened_assignment_users %>      
+    </div>
+  </div>
+</div>
 <%= render 'show_buttons' %>
 <div class="row">
   <div class="col-md-6">
@@ -15,11 +25,3 @@
   </div>
 </div>
 <%= render 'show_buttons' %>
-<div class="row">
-  <div class="col-md-12">
-    <div class="alert alert-info" role="alert">
-      <b>List of Available actions:</b><br/>
-      <%= @req.state_events %>
-    </div>
-  </div>
-</div>
