list of assignments different types

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <h1>Домашняя страница</h1>
 <div class="span12">
 	<ul>
+		<li><%= link_to "Список моих заданий", assignments_path %></li>
 		<li><%= link_to "Заявки на перезакрепление", req_reassigns_path %></li>
 		<li><%= link_to "Заявки на закупку", req_purchases_path %></li>
 	</ul>
