--- a/app/views/req_reassigns/_edit_buttons.erb
+++ b/app/views/req_reassigns/_edit_buttons.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
   	<div class="form-group fl1">
-    	<%= link_to t(:home_link), root_path, class: "btn btn-default", id: "btn-home" %>
+    	<%= link_to t(:home_link), req_reassigns_path, class: "btn btn-default", id: "btn-home" %>
   	</div>
   	<div class="form-group fl1">
 	    <%= link_to 'Просмотр', req_reassign_path(@req), class: "btn btn-default" %>
