--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,10 @@
-<h1>Домашняя страница</h1>
-<div class="span12">
-	<ul>
-		<li><%= link_to "Список моих заданий", assignments_path %></li>
-		<li><%= link_to "Заявки на перезакрепление", req_reassigns_path %></li>
-		<li><%= link_to "Заявки на закупку", req_purchases_path %></li>
-	</ul>
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="text-center m-t-lg">
+                <h1>Добро пожаловать в BPM on Rails</h1>
+                <small><span>Список новостей тут!</span></small>
+            </div>
+        </div>
+    </div>
 </div>
