--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,12 @@
+<% if user_signed_in? %>
 <nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
         <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
                 <div class="dropdown profile-element">
+                    <span>
+                        <img alt="image" class="img-circle" src="<%= image_url 'profile_small.jpg' %>"/>
+                    </span>
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear">
                             <span class="block m-t-xs">
@@ -12,13 +16,8 @@
                             </span> <span class="text-muted text-xs block">Главное меню <b class="caret"></b></span>
                         </span>
                     </a>
-                    <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <% if user_signed_in? %>
-                            <li><%= link_to 'Выход', destroy_user_session_path, :method=>'delete' %></li>
-                        <% else %>
-                            <li><%= link_to 'Регистрация', new_user_registration_path %></li>
-                            <li><%= link_to 'Вход', new_user_session_path %></li> 
-                        <% end %>
+                    <ul class="dropdown-menu animated fadeInRight m-t-xs">                         
+                        <li><%= link_to 'Выход', destroy_user_session_path, :method=>'delete' %></li>
                     </ul>
                 </div>
                 <div class="logo-element">
@@ -46,6 +45,6 @@
                 <% end %>
             </li> 
         </ul>
-
     </div>
 </nav>
+<% end %>
