--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,25 +1,68 @@
-<h1>Список моих заданий</h1>
-<div class="span12">
-<table class="table table-condensed">
-  <thead>
-    <tr>
-      <th><%= Assignment.human_attribute_name("id") %></th>
-      <th><%= Assignment.human_attribute_name("user_id") %></th>
-      <th>Тип задания</th>
-      <th><%= Assignment.human_attribute_name("description") %></th>        
-      <th><%= Assignment.human_attribute_name("closed") %></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @assignments.each do |ass| %>
-    <tr>
-      <td><%= link_to ass.id, ass.assignable %></td>
-      <td><%= ass.user.name %></td>
-      <td><%= ass.assignable_type %></td>
-      <td><%= ass.description %></td>
-      <td><%= ass.closed %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<div class="row wrapper border-bottom white-bg page-heading">
+  <div class="col-lg-10">
+    <h2>Список заданий</h2>
+  </div>
+</div>
+
+<div class="wrapper wrapper-content animated fadeInRight">
+  <div class="row">
+      <div class="col-lg-12">
+          <div class="ibox float-e-margins">
+              <div class="ibox-title">
+                  <h5>Задачи назначенные мне</h5>
+                  <div class="ibox-tools">
+                      <a class="collapse-link">
+                          <i class="fa fa-chevron-up"></i>
+                      </a>
+                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                          <i class="fa fa-wrench"></i>
+                      </a>
+                      <ul class="dropdown-menu dropdown-user">
+                          <li>
+                              <a href="#">Config option 1</a>
+                          </li>
+                          <li>
+                              <a href="#">Config option 2</a>
+                          </li>
+                      </ul>
+                      <a class="close-link">
+                          <i class="fa fa-times"></i>
+                      </a>
+                  </div>
+              </div>
+              <div class="ibox-content">
+                  <div class="table-responsive">
+                      <table class="table table-bordered">
+                          <thead>
+                            <tr>
+                              <th><%= Assignment.human_attribute_name("id") %></th>
+                              <th><%= Assignment.human_attribute_name("user_id") %></th>
+                              <th>Тип задания</th>
+                              <th><%= Assignment.human_attribute_name("description") %></th>        
+                              <th><%= Assignment.human_attribute_name("closed") %></th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <% @assignments.each do |ass| %>
+                              <tr>
+                                <td><%= link_to ass.id, ass.assignable %></td>
+                                <td><%= ass.user.name %></td>
+                                <td><%= ass.assignable_type %></td>
+                                <td><%= ass.description %></td>
+                                <td>
+                                  <% if ass.closed == true %>
+                                    <a href="#"><i class="fa fa-check text-navy"></i></a>
+                                  <% end %>
+                                </td>
+                              </tr>
+                            <% end %>
+                          </tbody>
+                      </table>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+
+  </div>
 </div>
