--- a/app/views/req_purchases/_show_buttons.html.erb
+++ b/app/views/req_purchases/_show_buttons.html.erb
@@ -1,12 +1,5 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="form-group fl1">
-      <%= link_to "Список заявок на закупку", req_purchases_path, class: "btn btn-default" %>
-    </div>
-    <% if @req.is_assigned?(current_user) %>
-      <div class="form-group fl1">
-        <%= link_to 'Редактировать', edit_req_purchase_path(@req), class: "btn btn-success" %>
-      </div> 
-    <% end %>
-  </div>
-</div>
+<% if @req.is_assigned?(current_user) %>
+  <div class="form-group">
+    <%= link_to 'Редактировать', edit_req_purchase_path(@req), class: "btn btn-primary" %>
+  </div> 
+<% end %>
