--- a/app/views/req_purchases/index.html.erb
+++ b/app/views/req_purchases/index.html.erb
@@ -1,6 +1,14 @@
 <div class="row wrapper border-bottom white-bg page-heading">
   <div class="col-lg-10">
     <h2>Заявки на закупку</h2>
+      <ol class="breadcrumb">
+        <li>
+          <a href="/">Главная</a>
+        </li>
+        <li class="active">
+          <strong>Заявки на закупку</strong>
+        </li>
+      </ol>    
   </div>
 </div>
 
