improve rep_purchase edit and new design

--- a/app/views/req_purchases/_actions_and_assignees.html.erb
+++ b/app/views/req_purchases/_actions_and_assignees.html.erb
@@ -1,2 +1,2 @@
-<p>Вам доступны следующие действия: <%= @req.state_events.join(", ") %></p>
-<p>Текущее назначение: <%= @req.opened_assignment_users %></p>
+<p>На статусе доступны следующие действия: <b><%= @req.state_events.join(", ") %></b></p>
+<p>Текущее назначение: <b><%= @req.opened_assignment_users %></b></p>
