--- a/app/views/req_purchases/edit.html.erb
+++ b/app/views/req_purchases/edit.html.erb
@@ -1,17 +1,55 @@
-<h1>Редактировать заявку на закупку</h1>
-<%= render 'edit_buttons' %>
-<div class="row">
-	<div class="col-md-6 col-sm-6">
-		<%= simple_form_for(@req) do |f| %>
-          <%= f.input :id, disabled: true %>      
-          <%= f.input :state, disabled: true %>	     	  
-		  <%= f.input :name, disabled: @req.is_disabled?("name") %>
-		  <%= f.input :money, disabled: @req.is_disabled?("money") %>
-		  <div class="form-group"><%= f.submit :save, class: "btn btn-success"%></div>
-		  <% @req.state_events.each do |x| %>
-		    <div class="form-group fl1"><%= f.submit x, class: "btn btn-success"%></div>
-		  <% end %>  
-		<% end %>
-	</div>
+<div class="row wrapper border-bottom white-bg page-heading">
+  <div class="col-lg-10">
+    <h2>Редактировать заявку на закупку</h2>
+      <ol class="breadcrumb">
+        <li>
+          <a href="/">Главная</a>
+        </li>
+        <li>
+          <a href="/req_purchases">Заявки на закупку</a>
+        </li>      
+        <li>
+        	<%= link_to "Заявка #{@req.id}", @req %>
+        </li>          
+        <li class="active">
+          <strong>Редактирование</strong>
+        </li>
+      </ol>    
+  </div>
 </div>
-<%= render 'edit_buttons' %>
+<div class="wrapper wrapper-content animated fadeInRight">
+  <div class="row">
+      <div class="col-lg-12">
+          <div class="ibox float-e-margins">
+              <div class="ibox-title">
+              	<h5>Редактирование заявки на закупку</h5>
+                  <div class="ibox-tools">
+                      <a class="collapse-link">
+                          <i class="fa fa-chevron-up"></i>
+                      </a>
+                      <a class="close-link">
+                          <i class="fa fa-times"></i>
+                      </a>
+                  </div>
+              </div>
+              <div class="ibox-content">
+  				<%= render 'actions_and_assignees' %>
+  				<div class="hr-line-dashed"></div>
+				<%= simple_form_for(@req) do |f| %>
+		          <%= f.input :id, disabled: true %>      
+		          <%= f.input :state, disabled: true %>	     	  
+				  <%= f.input :name, disabled: @req.is_disabled?("name") %>
+				  <%= f.input :money, disabled: @req.is_disabled?("money") %>
+		            <div class="form-group">
+		            	<%= link_to "Отмена", @req, class: "btn btn-white"%>
+	                   	<%= f.submit :save, class: "btn btn-primary"%>
+						<% @req.state_events.each do |x| %>
+						    <%= f.submit x, class: "btn btn-primary"%>
+						<% end %>	                    	
+	                </div>
+				<% end %>            	
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
