--- a/app/views/req_purchases/index.html.erb
+++ b/app/views/req_purchases/index.html.erb
@@ -49,7 +49,7 @@
                               <tr>
                                 <td>
                                   <% if req.is_assigned?(current_user) %>
-                                    <%= link_to 'Ред.', edit_req_purchase_path(req) %>
+                                    <a href="<%= edit_req_purchase_path(req) %>" class="icon-block"><i class="fa fa-edit fa-2x"></i></a>
                                   <% end %>   
                                 </td>
                                 <td><%= link_to req.id, req %></td>
