--- a/app/views/req_purchases/show.html.erb
+++ b/app/views/req_purchases/show.html.erb
@@ -30,7 +30,7 @@
                   </div>
               </div>
               <div class="ibox-content">
-      				<%= render 'actions_and_assignees' %>
+      				<%= render 'shared/actions_and_assignees' %>
       				<div class="hr-line-dashed"></div>
   				    <%= simple_form_for(@req) do |f| %>
   				      <%= f.input :id, disabled: true %>      
@@ -38,7 +38,11 @@
   				      <%= f.input :name, disabled: true %> 
   				      <%= f.input :money, disabled: true %>   
   				    <% end %>  
-  				    <%= render 'show_buttons' %>            	
+  				    <% if @req.is_assigned?(current_user) %>
+                <div class="form-group">
+                  <%= link_to 'Редактировать', edit_req_purchase_path(@req), class: "btn btn-primary" %>
+                </div> 
+              <% end %>          	
               </div>
           </div>
       </div>
