--- a/app/views/req_reassigns/new.html.erb
+++ b/app/views/req_reassigns/new.html.erb
@@ -1,20 +1,37 @@
-<h1 id="new">Создать заявку</h1>
-<div class="form-group">
-  <%= link_to t(:home_link), root_path, class: "btn btn-default", id: "btn-home" %>
+<div class="row wrapper border-bottom white-bg page-heading">
+  <div class="col-lg-10">
+    <h2>Создать заявку на перезакрепление</h2>
+    <ol class="breadcrumb">
+      <li><a href="/">Главная</a></li>
+      <li><a href="/req_purchases">Заявки на перезакрепление</a></li>               
+      <li class="active"><strong>Создание</strong></li>
+    </ol>    
+  </div>
 </div>
-<div class="row">
-	<div class="col-md-6 col-sm-6">
-		<%= simple_form_for(@req) do |f| %>
-		  <%= f.input :client_id, collection: Client.order(:name).where("manager_id = ?", current_user.id), label_method: :name, value_method: :id %>
-		  <%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id %>
-		  <%= f.input :money %>
-		  <%= f.input :info %>
-		  <div class="form-group fl1"><%= f.submit :save, class: "btn btn-success"%></div>
-		<% end %>
-	</div>
+<div class="wrapper wrapper-content animated fadeInRight">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5>Создание заявки на перезакрепление</h5>
+          <div class="ibox-tools">
+            <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+            <a class="close-link"><i class="fa fa-times"></i></a>
+          </div>
+        </div>
+        <div class="ibox-content">
+        	<%= simple_form_for(@req) do |f| %>
+        	<%= f.input :client_id, collection: Client.order(:name).where("manager_id = ?", current_user.id), label_method: :name, value_method: :id %>
+        	<%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id %>
+        	<%= f.input :money %>
+        	<%= f.input :info %>
+        	<div class="form-group">
+        		<%= link_to "Отмена", @req, class: "btn btn-white"%>
+        		<%= f.submit :save, class: "btn btn-primary"%>
+        	</div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="form-group">
-  <%= link_to t(:home_link), root_path, class: "btn btn-default", id: "btn-home" %>
-</div>
-<br/>
-<br/>
