--- a/app/views/req_reassigns/show.html.erb
+++ b/app/views/req_reassigns/show.html.erb
@@ -1,29 +1,54 @@
-<h1 id="show">Просмотр заявки</h1>
-<div class="row">
-  <div class="col-md-12">
-    <div class="alert alert-info" role="alert">
-      <b>Доступные действия:</b><br/>
-      <%= @req.state_events %><br/>
-      <b>Текущее назначение:</b><br/>
-      <%= @req.opened_assignment_users %>      
-    </div>
+<div class="row wrapper border-bottom white-bg page-heading">
+  <div class="col-lg-10">
+    <h2>Просмотр заявки на перезакрепление</h2>
+      <ol class="breadcrumb">
+        <li>
+          <a href="/">Главная</a>
+        </li>
+        <li>
+          <a href="/req_purchases">Заявки на перезакрепление</a>
+        </li>        
+        <li class="active">
+          <strong><%= "Заявка #{@req.id}" %></strong>
+        </li>
+      </ol>    
   </div>
 </div>
-<%= render 'show_buttons' %>
-<div class="row">
-  <div class="col-md-6">
-    <%= simple_form_for(@req) do |f| %>
-      <%= f.input :id, disabled: true %>      
-      <%= f.input :state, disabled: true %> 
-      <%= f.input :user_id, collection: User.all, label_method: :name, value_method: :id, disabled: true %>
-      <%= f.input :client_id, collection: Client.order(:name).all, label_method: :name, value_method: :id, disabled: true %>   
-      <%= f.input :old_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: true %>
-      <%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: true  %>   
-      <%= f.input :money, disabled: true %>   
-      <%= f.input :info, disabled: true %> 
-    <% end %>  
+<div class="wrapper wrapper-content animated fadeInRight">
+  <div class="row">
+      <div class="col-lg-12">
+          <div class="ibox float-e-margins">
+              <div class="ibox-title">
+                <h5>Информация о заявке на перезакрепление</h5>
+                  <div class="ibox-tools">
+                      <a class="collapse-link">
+                          <i class="fa fa-chevron-up"></i>
+                      </a>
+                      <a class="close-link">
+                          <i class="fa fa-times"></i>
+                      </a>
+                  </div>
+              </div>
+              <div class="ibox-content">
+              <%= render 'shared/actions_and_assignees' %>
+              <div class="hr-line-dashed"></div>
+              <%= simple_form_for(@req) do |f| %>
+                <%= f.input :id, disabled: true %>      
+                <%= f.input :state, disabled: true %> 
+                <%= f.input :user_id, collection: User.all, label_method: :name, value_method: :id, disabled: true %>
+                <%= f.input :client_id, collection: Client.order(:name).all, label_method: :name, value_method: :id, disabled: true %>   
+                <%= f.input :old_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: true %>
+                <%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: true  %>   
+                <%= f.input :money, disabled: true %>   
+                <%= f.input :info, disabled: true %> 
+              <% end %>  
+              <% if @req.is_assigned?(current_user) %>
+                <div class="form-group">
+                  <%= link_to 'Редактировать', edit_req_reassign_path(@req), class: "btn btn-primary" %>
+                </div> 
+              <% end %>               
+              </div>
+          </div>
+      </div>
   </div>
 </div>
-<%= render 'show_buttons' %>
-<br/>
-<br/>
